logs/blockade.log
Listing '.'...
Listing './bin'...
Compiling './bin/wsdump.py'...
Listing './include'...
Listing './include/site'...
Listing './include/site/python3.5'...
Listing './include/site/python3.5/greenlet'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Flask-0.10.1.egg-info'...
Listing './lib/python3.5/site-packages/Jinja2-2.10.dist-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/PyYAML-3.11.egg-info'...
Listing './lib/python3.5/site-packages/Werkzeug-0.14.1.dist-info'...
Listing './lib/python3.5/site-packages/args-0.1.0.egg-info'...
Listing './lib/python3.5/site-packages/blockade'...
Listing './lib/python3.5/site-packages/blockade/api'...
Listing './lib/python3.5/site-packages/blockade/tests'...
Listing './lib/python3.5/site-packages/blockade-0.4.0.egg-info'...
Listing './lib/python3.5/site-packages/certifi'...
Listing './lib/python3.5/site-packages/certifi-2017.11.5.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/clint'...
Listing './lib/python3.5/site-packages/clint/packages'...
Listing './lib/python3.5/site-packages/clint/packages/colorama'...
Listing './lib/python3.5/site-packages/clint/textui'...
Listing './lib/python3.5/site-packages/clint-0.4.1.egg-info'...
Listing './lib/python3.5/site-packages/docker'...
Listing './lib/python3.5/site-packages/docker/api'...
Listing './lib/python3.5/site-packages/docker/models'...
Listing './lib/python3.5/site-packages/docker/transport'...
Listing './lib/python3.5/site-packages/docker/types'...
Listing './lib/python3.5/site-packages/docker/utils'...
Listing './lib/python3.5/site-packages/docker-2.1.0.dist-info'...
Listing './lib/python3.5/site-packages/docker_pycreds-0.2.1.dist-info'...
Listing './lib/python3.5/site-packages/dockerpycreds'...
Listing './lib/python3.5/site-packages/flask'...
Listing './lib/python3.5/site-packages/flask/ext'...
Listing './lib/python3.5/site-packages/flask/testsuite'...
Listing './lib/python3.5/site-packages/flask/testsuite/static'...
Listing './lib/python3.5/site-packages/flask/testsuite/templates'...
Listing './lib/python3.5/site-packages/flask/testsuite/templates/nested'...
Listing './lib/python3.5/site-packages/flask/testsuite/test_apps'...
Listing './lib/python3.5/site-packages/flask/testsuite/test_apps/blueprintapp'...
Listing './lib/python3.5/site-packages/flask/testsuite/test_apps/blueprintapp/apps'...
Listing './lib/python3.5/site-packages/flask/testsuite/test_apps/blueprintapp/apps/admin'...
Listing './lib/python3.5/site-packages/flask/testsuite/test_apps/blueprintapp/apps/admin/static'...
Listing './lib/python3.5/site-packages/flask/testsuite/test_apps/blueprintapp/apps/admin/templates'...
Listing './lib/python3.5/site-packages/flask/testsuite/test_apps/blueprintapp/apps/frontend'...
Listing './lib/python3.5/site-packages/flask/testsuite/test_apps/blueprintapp/apps/frontend/templates'...
Listing './lib/python3.5/site-packages/flask/testsuite/test_apps/config_package_app'...
Listing './lib/python3.5/site-packages/flask/testsuite/test_apps/flask_broken'...
Listing './lib/python3.5/site-packages/flask/testsuite/test_apps/flask_newext_package'...
Listing './lib/python3.5/site-packages/flask/testsuite/test_apps/flaskext'...
Listing './lib/python3.5/site-packages/flask/testsuite/test_apps/flaskext/oldext_package'...
Listing './lib/python3.5/site-packages/flask/testsuite/test_apps/lib'...
Listing './lib/python3.5/site-packages/flask/testsuite/test_apps/lib/python2.5'...
Listing './lib/python3.5/site-packages/flask/testsuite/test_apps/lib/python2.5/site-packages'...
Listing './lib/python3.5/site-packages/flask/testsuite/test_apps/lib/python2.5/site-packages/site_package'...
Listing './lib/python3.5/site-packages/flask/testsuite/test_apps/moduleapp'...
Listing './lib/python3.5/site-packages/flask/testsuite/test_apps/moduleapp/apps'...
Listing './lib/python3.5/site-packages/flask/testsuite/test_apps/moduleapp/apps/admin'...
Listing './lib/python3.5/site-packages/flask/testsuite/test_apps/moduleapp/apps/admin/static'...
Listing './lib/python3.5/site-packages/flask/testsuite/test_apps/moduleapp/apps/admin/templates'...
Listing './lib/python3.5/site-packages/flask/testsuite/test_apps/moduleapp/apps/frontend'...
Listing './lib/python3.5/site-packages/flask/testsuite/test_apps/moduleapp/apps/frontend/templates'...
Listing './lib/python3.5/site-packages/flask/testsuite/test_apps/path'...
Listing './lib/python3.5/site-packages/flask/testsuite/test_apps/path/installed_package'...
Listing './lib/python3.5/site-packages/flask/testsuite/test_apps/subdomaintestmodule'...
Listing './lib/python3.5/site-packages/flask/testsuite/test_apps/subdomaintestmodule/static'...
Listing './lib/python3.5/site-packages/gevent'...
Compiling './lib/python3.5/site-packages/gevent/_util_py2.py'...
***   File "./lib/python3.5/site-packages/gevent/_util_py2.py", line 8
    raise type, value, tb
              ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/gevent-1.1.1.dist-info'...
Listing './lib/python3.5/site-packages/greenlet-0.4.12.dist-info'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/itsdangerous-0.24.egg-info'...
Listing './lib/python3.5/site-packages/jinja2'...
Compiling './lib/python3.5/site-packages/jinja2/asyncfilters.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncfilters.py", line 24
    yield item
    ^
SyntaxError: 'yield' inside async function

Compiling './lib/python3.5/site-packages/jinja2/asyncsupport.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncsupport.py", line 35
    yield event
    ^
SyntaxError: 'yield' inside async function

Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests-2.18.4.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.9.0.dist-info'...
Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.22.dist-info'...
Listing './lib/python3.5/site-packages/websocket'...
Listing './lib/python3.5/site-packages/websocket/tests'...
Listing './lib/python3.5/site-packages/websocket/tests/data'...
Listing './lib/python3.5/site-packages/websocket_client-0.46.0.dist-info'...
Listing './lib/python3.5/site-packages/werkzeug'...
Listing './lib/python3.5/site-packages/werkzeug/contrib'...
Listing './lib/python3.5/site-packages/werkzeug/debug'...
Listing './lib/python3.5/site-packages/werkzeug/debug/shared'...
Listing './lib/python3.5/site-packages/yaml'...
Listing './share'...
Listing './share/python-wheels'...
